--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "TodoListApp",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
+    "@hookform/resolvers": "3.9.0",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/native-stack": "6.11.0",
+    "@reduxjs/toolkit": "2.2.7",
+    "json-server": "1.0.0-beta.1",
     "react": "18.2.0",
-    "react-native": "0.74.4"
+    "react-hook-form": "7.52.1",
+    "react-native": "0.74.4",
+    "react-native-gesture-handler": "2.18.1",
+    "react-native-reanimated": "3.14.0",
+    "react-native-safe-area-context": "4.10.8",
+    "react-native-screens": "3.33.0",
+    "react-native-svg": "15.4.0",
+    "react-redux": "9.1.2",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,16 +36,19 @@
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
     "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "@types/react-test-renderer": "18.0.0",
+    "babel-jest": "29.6.3",
+    "babel-plugin-module-resolver": "5.0.2",
+    "eslint": "8.19.0",
+    "jest": "29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@1.22.21"
 }
