--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
+    "start:development": "NODE_ENV=development npx react-native start --reset-cache",
+    "start:production": "NODE_ENV=production npx react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
